# RL_RetroSynthesis

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sync-to-hf.yml
app/: main.py
configs/rl/: retrosynthesis-continue.toml  retrosynthesis-full.toml  retrosynthesis.toml
data/stock/: __init__.py  buyables.csv  loader.py
env/: ChemEnv.py  MCTS.py  Rewards.py  __init__.py
environments/retrosynthesis/: README.md  pyproject.toml  retrosynthesis.py
lib/sascorer/: __init__.py  sascorer.py
models/: __init__.py  policy.py
scripts/: convert_gguf_colab.py  eval_mcts.py  eval_topk.py  inference.py  inference_hf.py  inference_pi.py  merge_and_push.py  merge_colab.py  prepare_data.py  prepare_pi_dataset.py  prepare_stock.py  setup_prime.sh  train_rl.py
tests/: conftest.py  test_chemenv.py  test_eval_mcts.py  test_eval_topk.py  test_inference.py  test_mcts.py  test_policy.py  test_rewards.py  test_stock_list.py  test_train_helpers.py
