[project]
name = "retrosyn-rl"
version = "0.1.0"
description = "RL-powered retrosynthesis route finding"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -q"
markers = [
    "slow: marks tests that require model download or GPU (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top — needed for sys.path manipulation
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
    "UP007",  # Use X | Y for type annotations — keep Optional for compatibility
    "B905",   # zip() strict= — not supported in Python 3.9 (system Python)
]

[tool.ruff.lint.isort]
known-first-party = ["data", "env", "models", "scripts", "app"]
