[project]
name = "retrosyn-rl"
version = "0.1.0"
description = "RL-powered retrosynthesis route finding"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "verifiers>=0.1.11,<1.0.0",
    "rdkit-pypi>=2022.9.0,<2024.0.0",
    "transformers>=4.30.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
    "PyTDC>=0.4.0,<2.0.0",
    "streamlit>=1.25.0,<2.0.0",
    "py3Dmol>=2.0.0,<3.0.0",
    "stmol>=0.0.9,<0.1.0",
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<3.0",
    "openai>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "huggingface_hub>=0.23.0,<1.0.0",
    "datasets>=2.14.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff==0.8.6",
]
model-tools = [
    "accelerate>=0.30.0,<2.0.0",
    "peft>=0.11.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -q -m 'not slow'"
markers = [
    "slow: marks tests that require model download or GPU (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top — needed for sys.path manipulation
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
    "UP007",  # Use X | Y for type annotations — keep Optional for compatibility
    "B905",   # zip() strict= — not supported in Python 3.9 (system Python)
]

[tool.ruff.lint.per-file-ignores]
# Vendored third-party code (BSD license) — don't modify
"lib/sascorer/sascorer.py" = ["SIM115", "B007", "UP031"]
"environments/retrosynthesis/sascorer.py" = ["SIM115", "B007", "UP031"]

[tool.ruff.lint.isort]
known-first-party = ["data", "env", "models", "scripts", "app"]
