[project]
name = "retrosynthesis"
description = "RL environment for retrosynthetic route prediction using RDKit rewards"
tags = ["single-turn", "chemistry", "train", "eval"]
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8",
    "rdkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["retrosynthesis.py", "pyproject.toml", "sascorer.py", "fpscores.pkl.gz", "data"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 4
